deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mrsmith
spec:
  selector:
    app: mrsmith
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
